samples/httpbin-ext/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin-ext
spec:
  type: ExternalName
  externalName: httpbin.org
