samples/httpbin-ext/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-ext
  labels:
    name: httpbin-ext
  annotations:
    nanoproxy/strip-path: "true"
spec:
  ingressClassName: nanoproxy
  rules:
    - host: ""
      http:
        paths:
          - pathType: Prefix
            path: "/ext"
            backend:
              service:
                name: httpbin-ext
                port:
                  number: 80
